tests/ui/pattern/usefulness/match-slice-patterns.stderr
error[E0004]: non-exhaustive patterns: `&[_, Some(_), .., None, _]` not covered
  --> $DIR/match-slice-patterns.rs:2:11
   |
LL |     match list {
   |           ^^^^ pattern `&[_, Some(_), .., None, _]` not covered
   |
   = note: the matched value is of type `&[Option<()>]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &[.., Some(_), _] => {},
LL ~         &[_, Some(_), .., None, _] => todo!(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
